--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <meta charset="UTF-8"> 
 
-<title>web開発の練習1</title> 
-<link rel="stylesheet" href="mystyle.css"> <script src="myjs.js"></script><!-- この行を追加 -->
+<title>web開発の練習2024秋季</title> 
+<link rel="stylesheet" href="mystyle.css"> <!-- この行を追加 -->
 </head> 
 
 <body> 
@@ -84,7 +84,5 @@
 
 </body>
 </html>
-<title>Web開発の練習2024秋季</title>
-<link rel="stylesheet" href="mystyle.css"> <!-- この行を追加　-->
 
 
