--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta charset="UTF-8"> 
 
 <title>web開発の練習2024秋季</title> 
-<link rel="stylesheet" href="mystyle.css"><script src="myjs.js"></script> <!-- この行を追加 -->
+<link rel="stylesheet" href="mystyle.css"><script src="ex6-1.js"></script> <!-- この行を追加 -->
 </head> 
 
 <body> 
@@ -85,6 +85,9 @@
  <input type="button" value="ここをクリック"
 ondblclick="alert('Hello,kokoro!');">
  -->
+ 
+  
+ 
 </body>
 </html>
 
