--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
  <input type="button" value="ここをクリック"
 ondblclick="alert('Hello,kokoro!');">
  -->
- 
+ 練習問題６．１：
+ <input type="button" value="ここをクリック"
+ onclick="sayhello61();">
+ 練習問題６．２
+  <input type="button" value="ここをクリック"
+  onclick="sayhello61();sayhello61();">
   
  
 </body>
