--- a/index.html
+++ b/index.html
@@ -85,12 +85,14 @@
  <input type="button" value="ここをクリック"
 ondblclick="alert('Hello,kokoro!');">
  -->
- 練習問題６．１：
+ <h1>練習問題６．１：</h1>
  <input type="button" value="ここをクリック"
  onclick="sayhello61();">
- 練習問題６．２
+<h1>練習問題６．２</h1> 
   <input type="button" value="ここをクリック"
   onclick="sayhello61();sayhello61();">
+ <h1>練習問題６．４：</h1>
+ 
   
  
 </body>
