--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ ondblclick="alert('Hello,kokoro!');">
   <input type="button" value="ここをクリック"
   onclick="sayhello61();sayhello61();">
  <h1>練習問題６．４：</h1>
- 
-  
+  <input type="button" value="ここをクリック"
+  onclick="saygoodbye();">
  
 </body>
 </html>
