--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ ondblclick="alert('Hello,kokoro!');">
   onclick="sayhello61();sayhello61();">
  <h1>練習問題６．４：</h1>
   <input type="button" value="ここをクリック"
-  onclick="saygoodbye();">
+  onclick="saygoodbye61();">
  
 </body>
 </html>
