--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <meta charset="UTF-8"> 
 
 <title>web開発の練習2024秋季</title> 
-<link rel="stylesheet" href="mystyle.css"><script src="ex6-1.js"></script> <!-- この行を追加 -->
+<link rel="stylesheet" href="mystyle.css">
+ <script src="myjs.js"></script>
+ <script src="ex6-1.js"></script> <!-- この行を追加 -->
 </head> 
 
 <body> 
@@ -88,9 +90,11 @@ ondblclick="alert('Hello,kokoro!');">
  <h1>練習問題６．１：</h1>
  <input type="button" value="ここをクリック"
  onclick="sayhello61();">
+ 
 <h1>練習問題６．２</h1> 
   <input type="button" value="ここをクリック"
   onclick="sayhello61();sayhello61();">
+ 
  <h1>練習問題６．４：</h1>
   <input type="button" value="ここをクリック"
   onclick="saygoodbye61();">
