--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
  <input type="button" value="ここをクリック"
 ondblclick="alert('Hello,kokoro!');">
  -->
- <h1>練習問題６．１：</h1>
+ <h1>練習問題６．１</h1>
  <input type="button" value="ここをクリック"
  onclick="sayhello61();">
  
@@ -95,7 +95,7 @@ ondblclick="alert('Hello,kokoro!');">
   <input type="button" value="ここをクリック"
   onclick="sayhello61();sayhello61();">
  
- <h1>練習問題６．４：</h1>
+ <h1>練習問題６．４</h1>
   <input type="button" value="ここをクリック"
   onclick="saygoodbye61();">
  
