--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>web開発の練習2024秋季</title> 
 <link rel="stylesheet" href="mystyle.css">
  <script src="myjs.js"></script>
- <script src="ex6-1.js"></script>
+ <script src="ex6-1.js"></script><!-- この行を追加 -->  
 </head> 
 
 <body> 
@@ -81,24 +81,23 @@
    <p class="sample1">セキュリティ対策は今後ますます重要になるでしょう。</P>
   <p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
   <p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
-  
-<!--
+
+ <!--
 <h1>イベントハンドラの練習</h1>
  <input type="button" value="ここをクリック"
-ondblclick="alert('Hello,kokoro!');">
+ondblclick="alert('Hello,yumi!');">
  -->
- <h1>練習問題６．１</h1>
+ <h1>練習問題6.1</h1>
  <input type="button" value="ここをクリック"
  onclick="sayhello61();">
  
-<h1>練習問題６．２</h1> 
+ <h1>練習問題6.2</h1>
   <input type="button" value="ここをクリック"
-  onclick="sayhello61();sayhello61();">
+  onclick="sayhello61();sayhello61();"> 
  
- <h1>練習問題６．４</h1>
-  <input type="button" value="ここをクリック"
-  onclick="saygoodbye61();">
- 
+ <h1>練習問題6.4</h1>
+ <input type="button" value="ここをクリック"
+ onclick="saygoodbye61();">
 </body>
 </html>
 
