--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>web開発の練習2024秋季</title> 
 <link rel="stylesheet" href="mystyle.css">
  <script src="myjs.js"></script>
- <script src="ex6-1.js"></script><!-- この行を追加 -->  
+ <script src="ex6-1.js"></script>
 </head> 
 
 <body> 
