--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>web開発の練習2024秋季</title> 
 <link rel="stylesheet" href="mystyle.css">
  <script src="myjs.js"></script>
- <script src="ex6-1.js"></script>
+ <script src="ex6-1.js"></script><!-- この行を追加 -->  
 </head> 
 
 <body> 
@@ -85,7 +85,7 @@
  <!--
 <h1>イベントハンドラの練習</h1>
  <input type="button" value="ここをクリック"
-ondblclick="alert('Hello,yumi!');">
+ondblclick="alert('Hello,kokoro!');">
  -->
  <h1>練習問題6.1</h1>
  <input type="button" value="ここをクリック"
@@ -98,7 +98,10 @@ ondblclick="alert('Hello,yumi!');">
  <h1>練習問題6.4</h1>
  <input type="button" value="ここをクリック"
  onclick="saygoodbye61();">
-
+</body>
 </html>
 
 
+
+
+  
