--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <title>web開発の練習2024秋季</title> 
 <link rel="stylesheet" href="mystyle.css">
  <script src="myjs.js"></script>
- <script src="ex6-1.js"></script><!-- この行を追加 -->  
+ <script src="ex6-1.js"></script><!-- この行を追加 --> 
+ <script src="ex06-5.js"></script>
 </head> 
 
 <body> 
@@ -98,6 +99,11 @@ ondblclick="alert('Hello,kokoro!');">
  <h1>練習問題6.4</h1>
  <input type="button" value="ここをクリック"
  onclick="saygoodbye61();">
+
+ <h1>練習問題６．５</h1>
+ <input type="button" value="あいさつ" onclick="sayhello65();">
+ <input type="button" value="太郎" onclick="taro65();">
+ <input type="button" value="花子" onclick="hanako65();">
 </body>
 </html>
 
