--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@ ondblclick="alert('Hello,kokoro!');">
  <input type="button" value="あいさつ" onclick="sayhello65();">
  <input type="button" value="太郎" onclick="taro65();">
  <input type="button" value="花子" onclick="hanako65();">
+
+ <h1>練習問題６．６</h1>
+ 
 </body>
 </html>
 
