--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  <script src="myjs.js"></script>
  <script src="ex6-1.js"></script><!-- この行を追加 --> 
  <script src="ex6-5.js"></script>
+ <script src="ex6-6.js"></script>
 </head> 
 
 <body> 
@@ -106,7 +107,10 @@ ondblclick="alert('Hello,kokoro!');">
  <input type="button" value="花子" onclick="hanako65();">
 
  <h1>練習問題６．６</h1>
- 
+ <input type="button" value="あいさつ" onclick="sayhello66();">
+ <input type="button" value="太郎" onclick="taro66();">
+ <input type="button" value="花子" onclick="hanako66();">
+
 </body>
 </html>
 
