--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ ondblclick="alert('Hello,kokoro!');">
 
  <h1>練習問題６．６</h1>
  <input type="button" value="あいさつ" onclick="sayhello66();">
- <input type="button" value="太郎が来た" onclick="tarogakita66();">
- <input type="button" value="花子が来た" onclick="hanakogakita66();">
+ <input type="button" value="太郎" onclick="taro66();">
+ <input type="button" value="花子" onclick="hanako66();">
 
 </body>
 </html>
