--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@ ondblclick="alert('Hello,kokoro!');">
  <input type="button" value="あいさつ" onclick="sayhello66();">
  <input type="button" value="太郎" onclick="tarogakita66();">
  <input type="button" value="花子" onclick="hanakogakita66();">
+ 
+ <h1>練習問題６．７引数の練習</h1>
+ <input type="button" value="あいさつ" onclick="sayhello67();">
+ <input type="button" value="太郎" onclick="someone('太郎');">
+ <input type="button" value="花子" onclick="someone('花子');"> 
+ 
 
 </body>
 </html>
