--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ ondblclick="alert('Hello,kokoro!');">
 
  <h1>練習問題６．６</h1>
  <input type="button" value="あいさつ" onclick="sayhello66();">
- <input type="button" value="太郎" onclick="tarogakita66();">
- <input type="button" value="花子" onclick="hanakogakita66();">
+ <input type="button" value="太郎" onclick="taro66();gakita66();">
+ <input type="button" value="花子" onclick="hanako();gakita66();">
  
  <h1>練習問題６．７引数の練習</h1>
  <input type="button" value="あいさつ" onclick="sayhello67();">
