--- a/index.html
+++ b/index.html
@@ -115,8 +115,11 @@ ondblclick="alert('Hello,kokoro!');">
  <h1>練習問題６．７引数の練習</h1>
  <input type="button" value="あいさつ" onclick="sayhello67();">
  <input type="button" value="太郎" onclick="someone('太郎');">
- <input type="button" value="花子" onclick="someone('花子');"> 
- 
+ <input type="button" value="花子" onclick="someone('花子');">
+ <input type="button" value="レイ" onclick="someone('レイ');">
+ <input type="button" value="シンジ" onclick="someone('シンジ');">
+<input type="button" value="アスカ" onclick="someone('アスカ');">
+
 <h1>練習問題6.8JavaScriptによる変更の練習</h1>
  <input type="button" value="あいさつ" onclick="sayhello68();">
  <input type="button" value="太郎" onclick="taro68();">
