--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
  <script src="ex6-5.js"></script>
  <script src="ex6-6.js"></script>
  <script src="ex6-7.js"></script>
- <script src="ex06-8.js"></script>
-　<script src="ex06-88.js"></script>
-　<script src="ex06-9.js"></script>
- <script src="ex06-10.js"></script>
+ <script src="ex6-8.js"></script>
+　<script src="ex6-88.js"></script>
+　<script src="ex6-9.js"></script>
+ <script src="ex6-10.js"></script>
 </head> 
 
 <body> 
@@ -106,17 +106,17 @@ ondblclick="alert('Hello,kokoro!');">
  <input type="button" value="ここをクリック"
  onclick="saygoodbye61();">
 
- <h1>練習問題６．５</h1>
+ <h1>練習問題6.5</h1>
  <input type="button" value="あいさつ" onclick="sayhello65();">
  <input type="button" value="太郎" onclick="taro65();">
  <input type="button" value="花子" onclick="hanako65();">
 
- <h1>練習問題６．６</h1>
+ <h1>練習問題6.6</h1>
  <input type="button" value="あいさつ" onclick="sayhello66();">
  <input type="button" value="太郎" onclick="taro66();gakita66();">
  <input type="button" value="花子" onclick="hanako66();gakita66();">
  
- <h1>練習問題６．７引数の練習</h1>
+ <h1>練習問題6.7引数の練習</h1>
  <input type="button" value="あいさつ" onclick="sayhello67();">
  <input type="button" value="太郎" onclick="someone('太郎');">
  <input type="button" value="花子" onclick="someone('花子');">
