--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@ ondblclick="alert('Hello,kokoro!');">
  <input type="button" value="画像変更" onclick="imgchange1();">
  <img src='./image/城西ロゴ.jpg' id="logo" alt="Josai Logo">
  <input type="button" value="戻る" onclick="imgchange2();">
+
+ <h1>練習問題6-11
+ </h1>
+  
+ </練習問題6-11>
  
 </body>
 </html>
