--- a/index.html
+++ b/index.html
@@ -146,10 +146,13 @@ ondblclick="alert('Hello,kokoro!');">
  <img src='./image/城西ロゴ.jpg' id="logo" alt="Josai Logo">
  <input type="button" value="戻る" onclick="imgchange2();">
 
- <h1>練習問題6-11
- </h1>
-  
- </練習問題6-11>
+ <h1>練習問題6-11</h1>
+ <link rel="stylesheet" href="imagechange.css">
+</head>
+ <body>
+ <input type="button" value="画像の変更"onclick="imgchange1();">
+  <img src='./image/josai.png'id="logo" alt="Josai Logo"class="imagechange">
+ </body>
  
 </body>
 </html>
