--- a/index.html
+++ b/index.html
@@ -147,13 +147,15 @@ ondblclick="alert('Hello,kokoro!');">
  <img src='./image/城西ロゴ.jpg' id="logo" alt="Josai Logo">
  <input type="button" value="戻る" onclick="imgchange2();">
 
+ <h1>練習問題6-11　CSSを使って画像の大きさ制限</h1>
+<input type="button" value="画像の変更" onclick="imagchange3();">
+ <img src=' ./image/josailogo.jpg' id="logo" alt="Josai Logo"class="imagechange">
+ <input type="button" value="元に戻す" onclick="imgchange4();">
+
  <h1>練習問題6-11</h1>
- <link rel="stylesheet" href="imagechange.css">
-</head>
- <body>
- <input type="button" value="画像の変更"onclick="imgchange1();">
-  <img src='./image/josai.png'id="logo" alt="Josai Logo"class="imagechange">
- </body>
+ <form name="timer" >
+  <input type="button" value
+ 
  
 </body>
 </html>
