--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 　<script src="ex6-9.js"></script>
  <script src="ex6-10.js"></script>
 <script src="ex6-11.js"></script>
+ <script src="ex6-12.js"></script
 </head> 
 
 <body> 
@@ -155,7 +156,14 @@ ondblclick="alert('Hello,kokoro!');">
  <h1>練習問題6-11</h1>
  <form name="timer" >
   <input type="button" value
- 
+
+ <h1>練習問題6-12</h1>
+ <form name="timer">
+<input type="button" value="スタート"onclick="startfuc()">
+
+ <br>
+
+ <input type="text" name="moji" size="30"value=""> </form>
  
 </body>
 </html>
