--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 　<script src="ex6-9.js"></script>
  <script src="ex6-10.js"></script>
 <script src="ex6-11.js"></script>
- <script src="ex6-12.js"></script
+ <script src="ex6-12.js"></script>
+ <link rel="stylesheet" href="imagechange.css">
 </head> 
 
 <body> 
@@ -153,17 +154,12 @@ ondblclick="alert('Hello,kokoro!');">
  <img src=' ./image/josailogo.jpg' id="logo" alt="Josai Logo"class="imagechange">
  <input type="button" value="元に戻す" onclick="imgchange4();">
 
- <h1>練習問題6-11</h1>
- <form name="timer" >
-  <input type="button" value
-
- <h1>練習問題6-12</h1>
+<h1>練習問題6-12</h1>
  <form name="timer">
 <input type="button" value="スタート"onclick="startfuc()">
-
- <br>
-
- <input type="text" name="moji" size="30"value=""> </form>
+<br>
+ <input type="text" name="moji" size="30"value=""> 
+ </form>
  
 </body>
 </html>
