--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ ondblclick="alert('Hello,kokoro!');">
 
  <h1>練習問題6-11　CSSを使って画像の大きさ制限</h1>
 <input type="button" value="画像の変更" onclick="imagchange3();">
- <img src=' ./image/josailogo.jpg' id="logo" alt="Josai Logo"class="imagechange">
+ <img src=' ./image/城西ロゴ.jpg' id="logo" alt="Josai Logo"class="imagechange">
  <input type="button" value="元に戻す" onclick="imgchange4();">
 
 <h1>練習問題6-12</h1>
