--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ ondblclick="alert('Hello,kokoro!');">
 
   <h1>練習問題6-10 JavaScriptによるページ変更</h1>
  <input type="button" value="画像変更" onclick="imgchange1();">
- <img src='./image/体育座り.jpg' id="mark" alt="sit">
+ <img src='./image/体育座り.pmg' id="mark" alt="sit">
  <input type="button" value="戻る" onclick="imgchange2();">
 
  <h1>練習問題6-11　CSSを使って画像の大きさ制限</h1>
