--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@ ondblclick="alert('Hello,kokoro!');">
 
 <h1>練習問題6-12</h1>
  <form name="timer">
-<input type="button" value="スタート"onclick="startfuc()">
-<br>
- <input type="text" name="moji" size="30"value=""> 
+ <input type="button" value="スタート" onclick="startfnc()">
+ <br>
+ <input type="text" name="moji" size="30" value="">
  </form>
  
 </body>
