--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@ ondblclick="alert('Hello,kokoro!');">
  <br>
  <input type="text" name="moji" size="30" value="">
  </form>
+
+<h1>練習問題6-13</h1>
+<form> <input type="button" value="Timer"
+onclick="setTimeout('mes()',3000)" </form>
  
 </body>
 </html>
