--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
  <script src="ex6-6.js"></script>
  <script src="ex6-7.js"></script>
  <script src="ex6-8.js"></script>
-　<script src="ex6-88.js"></script>
-　<script src="ex6-9.js"></script>
+ <script src="ex6-88.js"></script>
+ <script src="ex6-9.js"></script>
  <script src="ex6-10.js"></script>
-<script src="ex6-11.js"></script>
+ <script src="ex6-11.js"></script>
  <script src="ex6-12.js"></script>
+ <script src="ex6-13.js"></script>
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -163,7 +164,11 @@ ondblclick="alert('Hello,kokoro!');">
 
 <h1>練習問題6-13</h1>
 <form> <input type="button" value="Timer"
-onclick="setTimeout('mes()',3000)" </form>
+onclick="setTimeout('mes()',3000)" 
+<input type="button" value="スタート" onclick="startfnc()">
+<br>
+<input type="text" name="moji" size="30" value="">       
+</form>
  
 </body>
 </html>
