--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ ondblclick="alert('Hello,kokoro!');">
  </form>
 
 <h1>練習問題6-13</h1>
-<form> <input type="button" value="Timer"
-onclick="setTimeout('mes()',3000)" 
-<input type="button" value="スタート" onclick="startfnc()">
+<form><input type="button" value="Timer" onclick="setTimeout('mes()',3000)"</form> 
+<form name="timer13">
+ <input type="button" value="スタート" onclick="hyouji13()">
 <br>
-<input type="text" name="moji" size="30" value="">       
+<input type="text" name="moji13" size="30" value="">       
 </form>
  
 </body>
