--- a/index.html
+++ b/index.html
@@ -165,7 +165,13 @@ ondblclick="alert('Hello,kokoro!');">
 <h1>練習問題6-13</h1>
 <form><input type="button" value="Timer" onclick="setTimeout('mes()',3000)"</form> 
 
- 
+<h1>練習問題6-13(2)</h1>
+<form name="timer13">
+<input type="button" value="スタート"
+onclick="hyouji13()">
+<br>
+<input type="text" name="moji13" size="30" value="">
+</form>
  
 </body>
 </html>
