--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
  <script src="ex6-11.js"></script>
  <script src="ex6-12.js"></script>
  <script src="ex6-13.js"></script>
+ <script src="ex6-13(2).js"></script>
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -166,13 +167,12 @@ ondblclick="alert('Hello,kokoro!');">
 <form><input type="button" value="Timer" onclick="setTimeout('mes()',3000)"</form> 
 
 <h1>練習問題6-13(2)</h1>
-<form name="timer13">
-<input type="button" value="スタート"
-onclick="hyouji13()">
+<input type="button" value="スタート" onclick="hyouji13()">
 <br>
 <input type="text" name="moji13" size="30" value="">
 </form>
- 
+
+
 </body>
 </html>
 
