--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@ ondblclick="alert('Hello,kokoro!');">
 
 <h1>練習問題6-13</h1>
 <form><input type="button" value="Timer" onclick="setTimeout('mes()',3000)"</form> 
+<form name="timer13">
 
 <h1>練習問題6-13(2)</h1>
 <input type="button" value="スタート" onclick="hyouji13()">
