--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
  <script src="ex6-12.js"></script>
  <script src="ex6-13.js"></script>
  <script src="ex6-13(2).js"></script>
+ <script src="ex6-14.js"></script>
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -173,7 +174,11 @@ ondblclick="alert('Hello,kokoro!');">
 <input type="text" name="moji13" size="30" value="">
 </form>
 
-
+<h1>練習問題6-14</h1>
+<form>
+<img src=' ./image/snoopy2.jpg' id="snoopy" alt="fine">
+<input type="button" value="画像切り替え" onclick="imgchange5();setTimeout( 'mes2()' ,3000);">
+</form>
 </body>
 </html>
 
