--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ ondblclick="alert('Hello,kokoro!');">
 
 <h1>練習問題6-14</h1>
 <form>
-<img src=' ./image/minion.jpg' id="minion" alt="minion">
+<img src=' ./image/minion.jpg' id="ミニオン" alt="minion">
 <input type="button" value="画像切り替え" onclick="imgchange5();setTimeout( 'mes2()' ,3000);">
 </form>
 </body>
