--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
  <script src="ex6-13.js"></script>
  <script src="ex6-13(2).js"></script>
  <script src="ex6-14.js"></script>
+ <script src="ex7-1.js"></script>
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -179,6 +180,11 @@ ondblclick="alert('Hello,kokoro!');">
 <img src=' ./image/minion.jpg' id="ミニオン" alt="minion">
 <input type="button" value="画像切り替え" onclick="imgchange5();setTimeout( 'mes2()' ,3000);">
 </form>
+
+<h1>練習問題7-1　テキスト入力の練習</h1>
+<input type="button" value="あいさつ" onclick="sayhello71();">
+<p>誰？<input type="text" id="who71"></p>
+ 
 </body>
 </html>
 
