--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
  <script src="ex6-13(2).js"></script>
  <script src="ex6-14.js"></script>
  <script src="ex7-1.js"></script>
+  <script src="ex7-2.js"></script>
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -184,7 +185,12 @@ ondblclick="alert('Hello,kokoro!');">
 <h1>練習問題7-1　テキスト入力の練習</h1>
 <input type="button" value="あいさつ" onclick="sayhello71();">
 <p>誰？<input type="text" id="who71"></p>
- 
+
+<h1>練習問題7-2　足し算</h1>
+<p>
+<input type="text" id="input1">+<input type="text" id="input2">
+<input type="button" value="計算" onclick="add();">
+</p> 
 </body>
 </html>
 
