--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
  <script src="ex6-14.js"></script>
  <script src="ex7-1.js"></script>
   <script src="ex7-2.js"></script>
+  <script src="ex7-3.js"></script>
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -190,7 +191,14 @@ ondblclick="alert('Hello,kokoro!');">
  <p>
   <input type="text" id="input1">+<input type="text" id="input2">
   <input type="button" value="計算" onclick="add();">
+</p>
+ 
+<h1>練習問題7-3 ボディーマス指数</h1>
+<p>
+体重(kg)<input type="text" id="input731">身長(m)<input type="text" id="input732">
+<input type="button" value="計算" onclick="add73();">
  </p>
+ 
 </body>
 </html>
 
