--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
  <script src="ex6-13(2).js"></script>
  <script src="ex6-14.js"></script>
  <script src="ex7-1.js"></script>
-  <script src="ex7-2.js"></script>
-  <script src="ex7-3.js"></script>
+ <script src="ex7-2.js"></script>
+ <script src="ex7-3.js"></script>
+ <script src="ex7-4.js"></script>
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -198,6 +199,13 @@ ondblclick="alert('Hello,kokoro!');">
 体重(kg)<input type="text" id="input731">身長(m)<input type="text" id="input732">
 <input type="button" value="計算" onclick="add73();">
  </p>
+
+<h1>練習問題7-4 なぞなぞ</h1>
+<p>目を閉じてないと見れないものはなーに？</p>
+<p>
+答（漢字1文字で）：<input type="text" id="answer">
+<input type="button" value="解答" onclick="nazo75();">
+</p>
  
 </body>
 </html>
