--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ ondblclick="alert('Hello,kokoro!');">
 <h1>練習問題7-4 なぞなぞ</h1>
 <p>目を閉じてないと見れないものはなーに？</p>
 <p>
-答（漢字1文字で）：<input type="text" id="answer75">
+答（漢字1文字で）：<input type="text" id="answer">
 <input type="button" value="解答" onclick="nazo75();">
 </p>
  
