--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
  <script src="ex7-3.js"></script>
  <script src="ex7-4.js"></script>
  <script src="ex7-5.js"></script>
+ <script src="ex7-6.js"></script>
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -215,6 +216,13 @@ ondblclick="alert('Hello,kokoro!');">
 <input type="button" value="解答" onclick="nazo75();">
 </p>
 
+<h1>練習問題7-6 なぞなぞ</h1>
+<p>目を閉じてないと見れないものはなーに？</p>
+<p>
+答（漢字1文字で):<input type="text" id="answer76">
+<input type="button" value="解答" onclick="nazo76();">
+</p>
+ 
 </body>
 </html>
 
