--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
  <script src="ex7-4.js"></script>
  <script src="ex7-5.js"></script>
  <script src="ex7-6.js"></script>
+ <script src="ex7-7.js"></script>
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -222,7 +223,9 @@ ondblclick="alert('Hello,kokoro!');">
 答（漢字1文字で):<input type="text" id="answer76">
 <input type="button" value="解答" onclick="nazo76();">
 </p>
- 
+
+<h1>練習問題7-7 </h1>
+
 </body>
 </html>
 
