--- a/index.html
+++ b/index.html
@@ -225,7 +225,11 @@ ondblclick="alert('Hello,kokoro!');">
 </p>
 
 <h1>練習問題7-7 </h1>
-
+<p>目を閉じてないと見れないものはなーに？</p>
+<p>
+ 答（漢字１文字で）:<input type="text" id="answer77">
+ <input type="button" value="解答" onclick="nazo77();">
+</p>
 </body>
 </html>
 
