--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ ondblclick="alert('Hello,kokoro!');">
 <h1>練習問題7-7 </h1>
 <p>目を閉じてないと見れないものはなーに？</p>
 <p>
- 答（漢字１文字で）:<input type="text" id="answer77">
+ <input type="text" id="answer77">
  <input type="button" value="解答" onclick="nazo77();">
 </p>
 </body>
