--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
  <script src="ex7-5.js"></script>
  <script src="ex7-6.js"></script>
  <script src="ex7-7.js"></script>
+<script src="ex7-8.js"></script> 
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -229,6 +230,12 @@ ondblclick="alert('Hello,kokoro!');">
 <p>
  <input type="text" id="answer77">
  <input type="button" value="解答" onclick="nazo77();">
+</p>
+
+<h1>練習問題7-8 </h1>
+<p>目を閉じてないと見れないものはなーに？</p>
+<p>答（漢字１文字で）：<input type="text" id="answer78">
+<input type="button" value="解答" onclick="nazo78();">
 </p>
 </body>
 </html>
