--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@ ondblclick="alert('Hello,kokoro!');">
 
 <h1>練習問題7-5 なぞなぞ</h1>
 <p>目を閉じてないと見れないものはなーに？</p>
-<p>
-答（漢字1文字で):<input type="text" id="answer75">
-<input type="button" value="解答" onclick="nazo75();">
-</p>
-
+ <p>
+  答(漢字１文字で):<input type="text" id="answer75">
+  <input type="button" value="解答" onclick="nazo75();">
+  </p>
+ 
 <h1>練習問題7-6 なぞなぞ</h1>
 <p>目を閉じてないと見れないものはなーに？</p>
 <p>
@@ -234,9 +234,10 @@ ondblclick="alert('Hello,kokoro!');">
 
 <h1>練習問題7-8 </h1>
 <p>目を閉じてないと見れないものはなーに？</p>
-<p>答（漢字１文字で）：<input type="text" id="answer78">
-<input type="button" value="解答" onclick="nazo78();">
-</p>
+ <p>答(漢字１文字で):<input type="text" id="answer78">
+  <input type="button" value="解答" onclick="nazo78();">
+ </p>
+ 
 </body>
 </html>
 
