--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
  <script src="ex7-6.js"></script>
  <script src="ex7-7.js"></script>
 <script src="ex7-8.js"></script> 
+<script src="ex7-9.js"></script> 
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -236,6 +237,12 @@ ondblclick="alert('Hello,kokoro!');">
 <p>目を閉じてないと見れないものはなーに？</p>
  <p>答(漢字１文字で):<input type="text" id="answer78">
   <input type="button" value="解答" onclick="nazo78();">
+ </p>
+
+  <h1>練習問題7-9</h1>
+  <p>目を閉じてないと見れないものはなーに？</p>
+ <p>答:<input type="text" id="answer79">
+  <input type="button" value="解答" onclick="nazo79();">
  </p>
  
 </body>
