--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
  <script src="ex7-7.js"></script>
 <script src="ex7-8.js"></script> 
 <script src="ex7-9.js"></script> 
+ <script src="ex7-10.js"></script>
+ <script src="ex7-11.js"></script>
  <link rel="stylesheet" href="imagechange.css">
 </head> 
 
@@ -243,6 +245,18 @@ ondblclick="alert('Hello,kokoro!');">
   <p>目を閉じてないと見れないものはなーに？</p>
  <p>答:<input type="text" id="answer79">
   <input type="button" value="解答" onclick="nazo79();">
+ </p>
+
+ <h1>練習問題7-10 </h1>
+ <p>
+  体重(kg)<input type="text" id="input7101">身長(ｍ)<input type="text" id="input7102">
+  <input type="button" value="計算" onclick="add710();">
+ </p>
+
+ <h1>練習問題7-11 </h1>
+ <p>
+  西暦年<input type="text" id="year1">
+  <input type="button" value="表示" onclick="year();">
  </p>
  
 </body>
