--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@ ondblclick="alert('Hello,kokoro!');">
  <img src='./image/体育座り.png' id="mark" alt="sit">
  <input type="button" value="戻る" onclick="imgchange2();">
 
- <h1>練習問題6-11　CSSを使って画像の大きさ制限</h1>
-<input type="button" value="画像の変更" onclick="imagchange3();">
- <img src=' ./image/城西ロゴ.jpg' id="logo" alt="Josai Logo"class="imagechange">
+<h1>練習問題6-11 CSSを使って画像の大きさ制御</h1>
+ <input type="button" value="画像の変更" onclick="imgchange3();">
+ <img src='./image/城西ロゴ.jpg' id="logo" alt="Josai Logo" class="imagechange">
  <input type="button" value="元に戻す" onclick="imgchange4();">
 
-<h1>練習問題6-12</h1>
+ <h1>練習問題6-12</h1>
  <form name="timer">
  <input type="button" value="スタート" onclick="startfnc()">
  <br>
@@ -176,8 +176,8 @@ ondblclick="alert('Hello,kokoro!');">
  </form>
 
 <h1>練習問題6-13</h1>
-<form><input type="button" value="Timer" onclick="setTimeout('mes()',3000)"</form> 
-<form name="timer13">
+ <form><input type="button" value="Timer" onclick="setTimeout('mes()',3000)"></form>
+
 
 <h1>練習問題6-13(2)</h1>
 <input type="button" value="スタート" onclick="hyouji13()">
